<resources>
    <string name="app_name">Dice</string>
    <string name="roll">Roll</string>
    <string name="img">img</string>
    <string name="img2">img2</string>
    <string name="roll_your_dice">ROLL YOUR DICE</string>
    <string name="img3">img3</string>
    <string name="img4">img4</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="imgp">imgp</string>
    <string name="player_1_player_2">PLAYER 1 PLAYER 2</string>
    <string name="simg">simg</string>
    <string name="start">START</string>
    <string name="button1">Button1</string>
    <string name="One_Vs_One">One Vs One</string>
    <string name="Vs_Computer">Vs Computer</string>
    <string name="back">back</string>
    <string name="button8">BACK</string>
</resources>