<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="739dp"
        android:layout_height="419dp"
        android:contentDescription="@string/simg"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ludo" />

    <Button
        android:id="@+id/button"
        android:layout_width="385dp"
        android:layout_height="108dp"
        android:backgroundTint="#BFAA3232"
        android:scaleY="1"
        android:text="@string/One_Vs_One"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DA4AE6D1"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251"
        tools:text="One Vs One" />

    <Button
        android:id="@+id/button2"
        android:layout_width="385dp"
        android:layout_height="108dp"
        android:backgroundTint="#BFAA3232"
        android:text="@string/Vs_Computer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DA4AE6D1"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        tools:text="Vs Computer" />
</androidx.constraintlayout.widget.ConstraintLayout>